Simplify makefile; fix longstanding stupid make_i2r issue

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ CXX = g++
 
 CXXFLAGS = -O3 -std=c++17 -mfpmath=sse -msse -msse2 -msse3 \
 	-DNDEBUG -Wall -Wextra -Wpedantic -pipe -Wundef --param large-function-growth=100000 -fPIC \
-	-I$(VIENNA) -I$(VIENNA)/include/ViennaRNA 
+	-I$(VIENNA)
 
 CDSFOLD_OBJS = fasta.o Util.o FileManager.o codon.o Problem.o AASeqConverter.o
 
