--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 ######## Please set this valuable BY YOURSELF ##############
-VIENNA=/home/andy/programs/ViennaRNA-2.4.9/src/ViennaRNA
+VIENNA=/afs/.ir/users/t/i/timsliu/RNA/ViennaRNA-2.4.9/src/ViennaRNA
 ############################################################
 
 all: compile link
@@ -8,7 +8,7 @@ CXX = g++
 
 CXXFLAGS = -O3 -std=c++17 -mfpmath=sse -msse -msse2 -msse3 \
 	-DNDEBUG -Wall -Wextra -Wpedantic -pipe -Wundef --param large-function-growth=100000 -fPIC \
-	-I$(VIENNA)
+	-I$(VIENNA) -I$(VIENNA)/include/ 
 
 CDSFOLD_OBJS = fasta.o Util.o FileManager.o codon.o Problem.o AASeqConverter.o
 
