--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,7 @@ CXXFLAGS = -O3 -std=c++17 -mfpmath=sse -msse -msse2 -msse3 \
 	-DNDEBUG -Wall -Wextra -Wpedantic -pipe -Wundef --param large-function-growth=100000 -fPIC \
 	-I$(VIENNA) -I$(VIENNA)/include/ 
 
-CDSFOLD_OBJS = fasta.o Util.o FileManager.o codon.o Problem.o AASeqConverter.o
+CDSFOLD_OBJS = fasta.o Util.o FileManager.o codon.o Problem.o AASeqConverter.o ViennaEnergyModel.o
 
 compile:
 	$(CXX) ${CXXFLAGS} -c CDSfold.cpp 
