moved preprocessor directive to use vienna to makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ CXX = g++
 
 CXXFLAGS = -O3 -std=c++17 -mfpmath=sse -msse -msse2 -msse3 \
 	-DNDEBUG -Wall -Wextra -Wpedantic -pipe -Wundef --param large-function-growth=100000 -fPIC \
-	-I$(VIENNA) -I$(VIENNA)/include/ 
+	-I$(VIENNA) -I$(VIENNA)/include/ -DUSE_VIENNA_ENERGY_MODEL 
 
 CDSFOLD_OBJS = fasta.o Util.o FileManager.o codon.o Problem.o AASeqConverter.o ViennaEnergyModel.o
 
