added test_vm silent build target

--- a/src/Makefile
+++ b/src/Makefile
@@ -52,6 +52,9 @@ example:
 test:
 	python3 $(CDSHOME)/test/run_tests.py -s
 
+test_vm:
+	python3 $(CDSHOME)/test/run_tests.py
+
 clean:
 	-rm -rf *.o
 	-rm -rf *.s
