--- a/src/Makefile
+++ b/src/Makefile
@@ -27,7 +27,7 @@ vienna: CXXFLAGS+=$(VIENNA_FLAGS)
 vienna: LD_FLAGS+=$(VIENNA_LD_FLAGS)
 vienna: CDSFOLD_OBJS+=$(VIENNA_OBJS)
 vienna: compile $(CDSFOLD_OBJS) $(VIENNA_OBJS) link
-	cp CDSfold $(CDSHOME)/test/bin
+	cp CDSfold $(CDSHOME)/test/bin/CDSfoldLatest
 
 ################# Debug build ##############################
 DEBUG_FLAGS = -DDEBUG -g -fverbose-asm
@@ -59,6 +59,6 @@ clean:
 	-rm -rf *.o
 	-rm -rf *.s
 	-rm -rf CDSfold
-	-rm -rf $(CDSHOME)/test/bin/CDSfold
+	-rm -rf $(CDSHOME)/test/bin/CDSfoldLatest
 
 .PHONY: all clean dummy test link compile vienna
