--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,13 +10,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: set-env
+    - name: cds-test
       run: |
         export CDS_HOME=`pwd`
-        echo $CDS_HOME
-        ls
         cd src
         make test_vm 
