timsliu/add ci (#21)
* rewrote test script to compare against a reference instead of a saved gold model

--- a/src/Makefile
+++ b/src/Makefile
@@ -27,6 +27,7 @@ vienna: CXXFLAGS+=$(VIENNA_FLAGS)
 vienna: LD_FLAGS+=$(VIENNA_LD_FLAGS)
 vienna: CDSFOLD_OBJS+=$(VIENNA_OBJS)
 vienna: compile $(CDSFOLD_OBJS) $(VIENNA_OBJS) link
+	cp CDSfold $(CDSHOME)/test/bin/CDSfoldLatest
 
 ################# Debug build ##############################
 DEBUG_FLAGS = -DDEBUG -g -fverbose-asm
@@ -49,11 +50,15 @@ example:
 	$(CDSHOME)/src/CDSfold $(CDSHOME)/example/test.faa
 
 test:
+	python3 $(CDSHOME)/test/run_tests.py -s
+
+test_vm:
 	python3 $(CDSHOME)/test/run_tests.py
 
 clean:
-	-rm *.o
-	-rm *.s
-	-rm CDSfold
+	-rm -rf *.o
+	-rm -rf *.s
+	-rm -rf CDSfold
+	-rm -rf $(CDSHOME)/test/bin/CDSfoldLatest
 
 .PHONY: all clean dummy test link compile vienna
