--- a/src/Makefile
+++ b/src/Makefile
@@ -32,13 +32,13 @@ vienna: compile $(CDSFOLD_OBJS) $(VIENNA_OBJS) link
 ############### Jittered Vienna build  ######################
 
 JITTER_FLAGS = -I$(VIENNA) -I$(VIENNA)/include/ -DUSE_JITTER_ENERGY_MODEL 
-JITTER_OBJS = JitteredViennaEnergyModel.o
+JITTER_OBJS = ViennaEnergyModel.o
 JITTER_LD_FLAGS = -L$(VIENNA) -lRNA
 
-jitter: CXXFLAGS+=$(VIENNA_FLAGS)
-jitter: LD_FLAGS+=$(VIENNA_LD_FLAGS)
-jitter: CDSFOLD_OBJS+=$(VIENNA_OBJS)
-jitter: compile $(CDSFOLD_OBJS) $(VIENNA_OBJS) link
+jitter: CXXFLAGS+=$(JITTER_FLAGS)
+jitter: LD_FLAGS+=$(JITTER_LD_FLAGS)
+jitter: CDSFOLD_OBJS+=$(JITTER_OBJS)
+jitter: compile $(CDSFOLD_OBJS) $(JITTER_OBJS) link
 	cp CDSfold $(CDSHOME)/test/bin/CDSfoldLatest
 
 ################# Debug build ##############################
